compiler/testData/diagnostics/tests/j+k/accessClassObjectFromJava.kt
// FIR_IDENTICAL
class Foo {
  companion object {
    val bar = 1

    fun test(a: Foo.<!UNRESOLVED_REFERENCE!>`object`<!>) {

    }

  }
}
